--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --port 9090",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "cry-table": "^0.0.2",
+    "cry-table": "^0.0.3",
     "element-ui": "^2.12.0",
     "vue": "^2.6.10"
   },
