--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cry-table",
-  "version": "0.0.1",
-  "private": true,
+  "version": "0.0.9",
+  "private": false,
   "scripts": {
     "dev": "vue-cli-service serve --port 8082",
     "build": "vue-cli-service build"
